<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home_bottom_nav" />
    <item
        android:id="@+id/nav_community"
        android:icon="@drawable/community"
        android:title="@string/community_bottom_nav"
        />
    <item
        android:id="@+id/nav_gps"
        android:icon="@drawable/gps"
        android:title="@string/gps_nav_bar" />
    <item
        android:id="@+id/nav_shop"
        android:icon="@drawable/shop"
        android:title="@string/shop_bottom_nav" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile_bottom_nav" />
</menu>
